--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "rimraf": "^5.0.10",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.8.3",
-    "vite": "^5.0.0"
+    "vite": "npm:rolldown-vite@latest",
+       "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "dependencies": {
     "@communityox/fx-utils": "latest",
