--- a/package.json
+++ b/package.json
@@ -1,50 +1,49 @@
 {
-  "name": "typescript_boilerplate",
-  "author": "Thrustgamers",
-  "version": "1.0.5",
-  "license": "MIT",
-  "type": "module",
-  "scripts": {
-    "web:dev": "cd src/web && vite dev",
-    "web:watch": "cd src/web && vite build --watch",
-    "build": "bun run scripts/build.js --mode=production",
-    "watch": "bun run scripts/build.js --watch",
-    "prettier": "prettier ./src/**/*.ts --write"
-  },
-  "keywords": [
-    "fivem"
-  ],
-  "devDependencies": {
-    "@biomejs/biome": "2.0.0",
-    "@citizenfx/client": "^2.0.16085-1",
-    "@citizenfx/server": "^2.0.14862-1",
-    "@types/node": "^20.19.1",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.19",
-    "cross-env": "^7.0.3",
-    "esbuild": "^0.19.12",
-    "eslint": "^8.54.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "postcss": "^8.4.38",
-    "rimraf": "^5.0.10",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.8.3",
-    "vite": "npm:rolldown-vite@latest",
-       "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  },
-  "dependencies": {
-    "@communityox/fx-utils": "latest",
-    "@communityox/ox_core": "latest",
-    "@communityox/ox_lib": "latest",
-    "@communityox/oxmysql": "latest"
-  },
-  "engines": {
-    "node": ">=16.9.1"
-  }
+	"name": "typescript_boilerplate",
+	"author": "Thrustgamers",
+	"version": "1.0.5",
+	"license": "MIT",
+	"type": "module",
+	"scripts": {
+		"web:dev": "cd src/web && vite dev",
+		"web:watch": "cd src/web && vite build --watch",
+		"build": "bun run scripts/build.js --mode=production",
+		"watch": "bun run scripts/build.js --watch",
+		"prettier": "prettier ./src/**/*.ts --write"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.0.6",
+		"@citizenfx/client": "^2.0.16085-1",
+		"@citizenfx/server": "^2.0.14862-1",
+		"@types/node": "^20.19.1",
+		"@tailwindcss/vite": "^4.0.7",
+		"tailwindcss": "^4.0.7",
+		"vite-plugin-solid": "^2.11.6",
+		"typescript": "^5.8.3",
+		"vite": "npm:rolldown-vite@latest"
+	},
+	"dependencies": {
+		"@communityox/fx-utils": "latest",
+		"@communityox/ox_core": "latest",
+		"@communityox/ox_lib": "latest",
+		"@communityox/oxmysql": "latest",
+		"@mantine/charts": "^8.1.3",
+		"@mantine/core": "^8.1.3",
+		"@mantine/dates": "^8.1.3",
+		"@mantine/form": "^8.1.3",
+		"@mantine/hooks": "^8.1.3",
+		"@mantine/modals": "^8.1.3",
+		"@mantine/notifications": "^8.1.3",
+		"@mantine/tiptap": "^8.1.3",
+		"@tiptap/extension-link": "^2.25.0",
+		"@tiptap/pm": "^2.25.0",
+		"@tiptap/react": "^2.25.0",
+		"@tiptap/starter-kit": "^2.25.0",
+		"dayjs": "^1.11.13",
+		"recharts": "2",
+		"solid-js": "^1.9.5"
+	},
+	"engines": {
+		"node": ">=16.9.1"
+	}
 }
