--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"@communityox/ox_core": "latest",
 		"@communityox/ox_lib": "latest",
 		"@communityox/oxmysql": "latest",
+		"@nativewrappers/fivem": "latest",
+		"@nativewrappers/server": "latest",
 		"@mantine/charts": "^8.1.3",
 		"@mantine/core": "^8.1.3",
 		"@mantine/dates": "^8.1.3",
